basic working example -edian

--- a/src/index.html
+++ b/src/index.html
@@ -12,21 +12,16 @@
     />
     <link rel="shortcut icon" href="./4geeks.ico" />
   </head>
+
   <body>
-    <div class="container text-center">
-      <div class="col">
-        <h1 class="mt-5">Excuse Generator</h1>
-        <img src="./rigo-baby.jpg" />
-      </div>
-      <div class="col">
-        <p class="alert alert-warning mt-4">
-          If this text is <b>not</b> centered and <b>yellow</b>, you probably
-          have an error
-        </p>
-      </div>
-      <div class="fixed-bottom p-4">
-        Made with ❤️ by
-        <a href="https://www.edianibarrola.com">Edian</a>
+    <div class="container h-100 text-center  ">
+      <div class="row align-items-stretch h-100">
+        <div class="col-12 divBox my-auto">
+          <h3>excuse generator</h3>
+        </div>
+        <div class="col-12 divBox  my-auto">
+          <h3 id="excuse">inner HTML</h3>
+        </div>
       </div>
     </div>
   </body>
